; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/oss/extr_pas2_pcm.c_pcm_set_bits.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/oss/extr_pas2_pcm.c_pcm_set_bits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pcm_bits = common dso_local global i32 0, align 4
@pcm_bitsok = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @pcm_set_bits to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pcm_set_bits(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp eq i32 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* @pcm_bits, align 4
  store i32 %7, i32* %2, align 4
  br label %27

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @pcm_bitsok, align 4
  %11 = and i32 %9, %10
  %12 = load i32, i32* %3, align 4
  %13 = icmp ne i32 %11, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %8
  %15 = load i32, i32* @pcm_bits, align 4
  store i32 %15, i32* %2, align 4
  br label %27

16:                                               ; preds = %8
  %17 = load i32, i32* %3, align 4
  %18 = load i32, i32* @pcm_bits, align 4
  %19 = icmp ne i32 %17, %18
  br i1 %19, label %20, label %25

20:                                               ; preds = %16
  %21 = call i32 @pas_read(i32 33673)
  %22 = xor i32 %21, 4
  %23 = call i32 @pas_write(i32 %22, i32 33673)
  %24 = load i32, i32* %3, align 4
  store i32 %24, i32* @pcm_bits, align 4
  br label %25

25:                                               ; preds = %20, %16
  %26 = load i32, i32* @pcm_bits, align 4
  store i32 %26, i32* %2, align 4
  br label %27

27:                                               ; preds = %25, %14, %6
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local i32 @pas_write(i32, i32) #1

declare dso_local i32 @pas_read(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
